# HR-PORTAL-LOCAL-DISC

./: .gitignore  AGENT_GOVERNANCE.md  AGENT_INTEGRATION_GUIDE.md  ARCHITECTURE_OVERVIEW.md  AZURE_OIDC_QUICK_SETUP.md  AZURE_SYSTEM_ENGINEER_ASSESSMENT.md  BLUEPRINT_ANALYSIS_SUMMARY.md  CLEANUP_STATUS_REPORT.md  CODE_REVIEW_FIXES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  DEPLOYMENT_SIMPLE_GUIDE.md  DEPLOYMENT_SUMMARY.md  ENHANCEMENT_INDEX.md  FEATURE_STATUS_MATRIX.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_STATUS_CHECK.md  HR_PORTAL_ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  LEAVE_PLANNER_PLAN.md  LEAVE_PLANNER_QUICK_REFERENCE.md  OIDC_SETUP_README.md  PASS_SYSTEM_ARCHITECTURE.md  PASS_SYSTEM_QUICK_REFERENCE.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_QUICK_REFERENCE.md  PHASE2_SUMMARY.md  PR_SUMMARY.md  QUICK_REFERENCE_CARD.md  README.md  REPO_STEWARD_REPORT.md  SELF_SCORING_REPORT.md  SIMPLIFICATION_ACTION_CHECKLIST.md  SIMPLIFICATION_INDEX.md  SIMPLIFICATION_PROPOSAL.md  SIMPLIFICATION_REVIEW.md  SIMPLIFICATION_VISUAL_SUMMARY.md  START_HERE.md  (+14 more)
backend/: .env.example  azure_startup.sh  database_indexes.sql  pyproject.toml  requirements.txt  run_production.py  start.sh  verify_config.py
backend/alembic/: env.py
backend/alembic/versions/: 20260110_0001_add_indexes.py  (+16 more)
backend/app/: database.py  health.py  main.py  seed_employees.json  startup_migrations.py
backend/static/: index.html
backend/tests/: conftest.py  test_attendance_router.py  test_cors_and_ssl.py  test_health_endpoints.py  test_leave_enhancements.py  test_time.py
(+257 files in other folders)
